--- a/azure/IoTGateway/SiRSensors/project.json
+++ b/azure/IoTGateway/SiRSensors/project.json
@@ -1,8 +1,6 @@
 ﻿{
   "dependencies": {
-    "Microsoft.Azure.Devices.Client": "1.0.19",
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
-    "Newtonsoft.Json": "9.0.1"
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0"
   },
   "frameworks": {
     "uap10.0": {}
