--- a/azure/IoTGateway/IoTGateway/IoTGateway.UWP.csproj
+++ b/azure/IoTGateway/IoTGateway/IoTGateway.UWP.csproj
@@ -95,6 +95,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="aws\ClientIoT.cs" />
     <Compile Include="azure\ClientIoT.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
