M2Xを追加 azureが接続できない問題が発覚 原因は「証明書」をマニフェストで設定していたことだった

--- a/azure/IoTGateway/IoTCloud/IoTCloud.UWP.csproj
+++ b/azure/IoTGateway/IoTCloud/IoTCloud.UWP.csproj
@@ -109,6 +109,11 @@
   <ItemGroup>
     <Compile Include="aws\ClientIoT.cs" />
     <Compile Include="azure\ClientIoT.cs" />
+    <Compile Include="azure\IoTClient.cs" />
+    <Compile Include="BaseCloudIoT.cs" />
+    <Compile Include="ICloudIoT.cs" />
+    <Compile Include="m2x\ClientIoT.cs" />
+    <Compile Include="m2x\PlugInFilter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\IoTCloud.rd.xml" />
   </ItemGroup>
