--- a/SIoTGateway/Main/Main.UWP.csproj
+++ b/SIoTGateway/Main/Main.UWP.csproj
@@ -100,6 +100,7 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Models\AnyDeviceFactory.cs" />
     <Compile Include="Models\SensorManageModule.cs" />
     <Compile Include="Models\SIoTGateway.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
