MQTTブローカー追加

--- a/SIoTGateway/SensorModuleSimulator/project.lock.json
+++ b/SIoTGateway/SensorModuleSimulator/project.lock.json
@@ -16946,6 +16946,7 @@
   },
   "projectFileDependencyGroups": {
     "": [
+      "M2Mqtt >= 4.3.0",
       "Microsoft.NETCore.UniversalWindowsPlatform >= 5.1.0"
     ],
     "UAP,Version=v10.0": []
