--- a/SIoTGateway/Common/Common.UWP.csproj
+++ b/SIoTGateway/Common/Common.UWP.csproj
@@ -143,6 +143,7 @@
     <Compile Include="Helpers\IBlobStorageClient.cs" />
     <Compile Include="Helpers\IBlobStorageClientFactory.cs" />
     <Compile Include="Helpers\IDocumentDBClient.cs" />
+    <Compile Include="Helpers\MqttHelper.cs" />
     <Compile Include="Helpers\ParsingHelper.cs" />
     <Compile Include="Helpers\ReflectionHelper.cs" />
     <Compile Include="Interfaces\ISensor.cs" />
