--- a/SIoTGateway/SIoTBrorker/project.json
+++ b/SIoTGateway/SIoTBrorker/project.json
@@ -1,10 +1,7 @@
 ﻿{
   "dependencies": {
-    "M2Mqtt": "4.3.0",
-    "Microsoft.Azure.Devices.Client": "1.0.21",
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
-    "Newtonsoft.Json": "9.0.1",
-    "WindowsAzure.Storage": "7.2.1"
+    "GnatMQ": "1.1.0",
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0"
   },
   "frameworks": {
     "uap10.0": {}
