--- a/SIoTGateway/SensorModuleSimulator/SensorModuleSimulator.csproj
+++ b/SIoTGateway/SensorModuleSimulator/SensorModuleSimulator.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <ProjectGuid>{591F71AF-3E27-4DE4-8D88-BA349FCAF26D}</ProjectGuid>
+    <ProjectGuid>{0E3CE345-17C9-4B3A-8C05-2ED77DA63143}</ProjectGuid>
     <OutputType>AppContainerExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Main</RootNamespace>
-    <AssemblyName>Main</AssemblyName>
+    <RootNamespace>SensorModuleSimulator</RootNamespace>
+    <AssemblyName>SensorModuleSimulator</AssemblyName>
     <DefaultLanguage>ja-JP</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
     <TargetPlatformVersion>10.0.14393.0</TargetPlatformVersion>
@@ -16,11 +16,11 @@
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <PackageCertificateKeyFile>Main_TemporaryKey.pfx</PackageCertificateKeyFile>
+    <PackageCertificateKeyFile>SensorModuleSimulator_TemporaryKey.pfx</PackageCertificateKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
-    <OutputPath>..\Build_Output\x86\Debug\</OutputPath>
+    <OutputPath>bin\x86\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE;NETFX_CORE;WINDOWS_UWP</DefineConstants>
     <NoWarn>;2008</NoWarn>
     <DebugType>full</DebugType>
@@ -30,7 +30,7 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
-    <OutputPath>..\Build_Output\x86\Release\</OutputPath>
+    <OutputPath>bin\x86\Release\</OutputPath>
     <DefineConstants>TRACE;NETFX_CORE;WINDOWS_UWP</DefineConstants>
     <Optimize>true</Optimize>
     <NoWarn>;2008</NoWarn>
@@ -95,23 +95,16 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="BulkDeviceTester.cs" />
-    <Compile Include="DeviceManager.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Models\AnyDeviceFactory.cs" />
-    <Compile Include="Models\SensorManageModule.cs" />
-    <Compile Include="Models\SIoTGateway.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TaskRegistHelper.cs" />
-    <Compile Include="ViewModels\MainWindowViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
       <SubType>Designer</SubType>
     </AppxManifest>
-    <None Include="Main_TemporaryKey.pfx" />
+    <None Include="SensorModuleSimulator_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Properties\Default.rd.xml" />
@@ -138,17 +131,9 @@
       <Project>{7dfccb60-f0aa-4178-905b-f9008aa7d1e3}</Project>
       <Name>Common.UWP</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Cooler\Cooler.UWP.csproj">
-      <Project>{2c561dc8-6d78-4e01-927f-81aa4c8f3134}</Project>
-      <Name>Cooler.UWP</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SIoTBrorker\SIoTBroker.UWP.csproj">
-      <Project>{f797f431-96a6-4a5a-9063-8dfe08ffe442}</Project>
-      <Name>SIoTBroker.UWP</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SIotGatewayCore\SIotGatewayCore.UWP.csproj">
-      <Project>{de89cf5d-eef2-4728-8aa5-f485d04a9c7a}</Project>
-      <Name>SIotGatewayCore.UWP</Name>
+    <ProjectReference Include="..\SiRSensors\SiRSensors.UWP.csproj">
+      <Project>{0bc00c57-0564-416c-9cfb-fbb8899babe4}</Project>
+      <Name>SiRSensors.UWP</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
