--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,39 @@
 /azure/IoTGateway/IoTCloud/obj
 /azure/IoTGateway/SiRBroker/obj
 /azure/IoTGateway/SiRBroker/bin
+/SIoTGateway/SIotGatewayCore/bin
+/SIoTGateway/Cooler/bin
+/SIoTGateway/SensorModuleSimulator/bin
+/SIoTGateway/SiRSensors/bin
+/SIoTGateway/Common/bin
+/SIoTGateway/DeviceRegister/bin
+/SIoTGateway/Main/bin
+/SIoTGateway/Infrastructure/bin
+/SIoTGateway/SIoTBrorker/bin
+/azure/IoTGateway/IoTGateway/IoTGateway.UWP.csproj.user
+/azure/IoTGateway/IoTGateway/project.json.REMOTE.json
+/azure/IoTGateway/IoTGateway/project.json.LOCAL.json
+/azure/IoTGateway/IoTGateway/project.json.BASE.json
+/azure/IoTGateway/IoTGateway.Common/bin
+/azure/IoTGateway/IoTGateway.Common/obj
+/azure/IoTGateway/SiRSensors/SiRSensors.UWP.csproj.user
+/azure/IoTGateway/SiRSensors/obj
+/azure/IoTGateway/SiRSensors/bin
+/DeviceRegister/.vs/DeviceRegister/v14
+/SIoTGateway/.vs
+/SIoTGateway/Common/obj
+/SIoTGateway/Common.WPF/obj/Debug
+/azure/IoTGateway/packages/M2Mqtt.4.3.0.0
+/azure/IoTGateway/IBMWatsonIoTP/obj/Debug
+/azure/IoTGateway/IBMWatsonIoTP/bin/Debug
+/azure/IoTGateway/.vs
+/SIoTGateway/Cooler/obj/x64/Debug
+/SIoTGateway/DeviceRegister/obj/Debug
+/SIoTGateway/Infrastructure/obj/x64/Debug
+/SIoTGateway/Main/obj/x64/Debug
+/SIoTGateway/SensorModuleSimulator/.vs/SensorModuleSimulator/v14
+/SIoTGateway/SensorModuleSimulator/obj
+/SIoTGateway/SIoTBrorker/obj/x64/Debug
+/SIoTGateway/SIotGatewayCore/obj/x64/Debug
+/SIoTGateway/SiRSensors/obj
+/SIoTGateway/SensorModuleSimulator/SensorModuleSimulator.csproj.user
