--- a/DeviceRegister/Common/Common.csproj
+++ b/DeviceRegister/Common/Common.csproj
@@ -65,6 +65,10 @@
       <HintPath>..\packages\Dynamitey.1.0.2.0\lib\net40\Dynamitey.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="M2Mqtt.Net, Version=4.3.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\M2Mqtt.4.3.0.0\lib\net45\M2Mqtt.Net.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.Azure.Amqp, Version=1.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Azure.Amqp.1.1.5\lib\net451\Microsoft.Azure.Amqp.dll</HintPath>
       <Private>True</Private>
@@ -158,6 +162,18 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\SIoTGateway\Common\Helpers\IHelper.cs">
+      <Link>Helpers\IHelper.cs</Link>
+    </Compile>
+    <Compile Include="..\..\SIoTGateway\Common\Helpers\MqttHelper.cs">
+      <Link>Helpers\MqttHelper.cs</Link>
+    </Compile>
+    <Compile Include="..\..\SIoTGateway\Common\Models\Sensor\AccelaData.cs">
+      <Link>Models\Sensor\AccelaData.cs</Link>
+    </Compile>
+    <Compile Include="..\..\SIoTGateway\Common\Models\Sensor\PositionData.cs">
+      <Link>Models\Sensor\PositionData.cs</Link>
+    </Compile>
     <Compile Include="Configurations\ConfigurationProvider.cs" />
     <Compile Include="Configurations\EnvironmentDescription.cs" />
     <Compile Include="Configurations\IConfigurationProvider.cs" />
