--- a/DeviceRegister/Common/packages.config
+++ b/DeviceRegister/Common/packages.config
@@ -11,6 +11,7 @@
   <package id="Dynamitey" version="1.0.2.0" targetFramework="net451" />
   <package id="EnterpriseLibrary.TransientFaultHandling" version="6.0.1304.0" targetFramework="net451" />
   <package id="jQuery" version="2.2.3" targetFramework="net451" />
+  <package id="M2Mqtt" version="4.3.0.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.Azure.Amqp" version="1.1.5" targetFramework="net451" />
