--- a/ShimadzuIoT/ShimadzuIoTGatewayCore.UWP/ShimadzuIoTGatewayCore.UWP.csproj
+++ b/ShimadzuIoT/ShimadzuIoTGatewayCore.UWP/ShimadzuIoTGatewayCore.UWP.csproj
@@ -3,12 +3,12 @@
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <ProjectGuid>{D722BA80-9535-42F8-B971-F5A66D30A1B4}</ProjectGuid>
-    <OutputType>AppContainerExe</OutputType>
+    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+    <ProjectGuid>{86979C1A-7189-4F53-9F2A-43DA3B560613}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ShimadzuIoTGateway</RootNamespace>
-    <AssemblyName>ShimadzuIoTGateway</AssemblyName>
+    <RootNamespace>ShimadzuIoTGatewayCore</RootNamespace>
+    <AssemblyName>ShimadzuIoTGatewayCore.UWP</AssemblyName>
     <DefaultLanguage>ja-JP</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
     <TargetPlatformVersion>10.0.14393.0</TargetPlatformVersion>
@@ -16,9 +16,28 @@
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <PackageCertificateKeyFile>ShimadzuIoTGateway_TemporaryKey.pfx</PackageCertificateKeyFile>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <DebugSymbols>true</DebugSymbols>
+    <DebugType>full</DebugType>
+    <Optimize>false</Optimize>
+    <OutputPath>bin\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE;NETFX_CORE;WINDOWS_UWP</DefineConstants>
+    <ErrorReport>prompt</ErrorReport>
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <DebugType>pdbonly</DebugType>
+    <Optimize>true</Optimize>
+    <OutputPath>bin\Release\</OutputPath>
+    <DefineConstants>TRACE;NETFX_CORE;WINDOWS_UWP</DefineConstants>
+    <ErrorReport>prompt</ErrorReport>
+    <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
+    <PlatformTarget>x86</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>bin\x86\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE;NETFX_CORE;WINDOWS_UWP</DefineConstants>
@@ -27,9 +46,9 @@
     <PlatformTarget>x86</PlatformTarget>
     <UseVSHostingProcess>false</UseVSHostingProcess>
     <ErrorReport>prompt</ErrorReport>
-    <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
+    <PlatformTarget>x86</PlatformTarget>
     <OutputPath>bin\x86\Release\</OutputPath>
     <DefineConstants>TRACE;NETFX_CORE;WINDOWS_UWP</DefineConstants>
     <Optimize>true</Optimize>
@@ -38,10 +57,9 @@
     <PlatformTarget>x86</PlatformTarget>
     <UseVSHostingProcess>false</UseVSHostingProcess>
     <ErrorReport>prompt</ErrorReport>
-    <Prefer32Bit>true</Prefer32Bit>
-    <UseDotNetNativeToolchain>true</UseDotNetNativeToolchain>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|ARM'">
+    <PlatformTarget>ARM</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>bin\ARM\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE;NETFX_CORE;WINDOWS_UWP</DefineConstants>
@@ -50,9 +68,9 @@
     <PlatformTarget>ARM</PlatformTarget>
     <UseVSHostingProcess>false</UseVSHostingProcess>
     <ErrorReport>prompt</ErrorReport>
-    <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|ARM'">
+    <PlatformTarget>ARM</PlatformTarget>
     <OutputPath>bin\ARM\Release\</OutputPath>
     <DefineConstants>TRACE;NETFX_CORE;WINDOWS_UWP</DefineConstants>
     <Optimize>true</Optimize>
@@ -61,10 +79,9 @@
     <PlatformTarget>ARM</PlatformTarget>
     <UseVSHostingProcess>false</UseVSHostingProcess>
     <ErrorReport>prompt</ErrorReport>
-    <Prefer32Bit>true</Prefer32Bit>
-    <UseDotNetNativeToolchain>true</UseDotNetNativeToolchain>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
+    <PlatformTarget>x64</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>bin\x64\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE;NETFX_CORE;WINDOWS_UWP</DefineConstants>
@@ -73,9 +90,9 @@
     <PlatformTarget>x64</PlatformTarget>
     <UseVSHostingProcess>false</UseVSHostingProcess>
     <ErrorReport>prompt</ErrorReport>
-    <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
+    <PlatformTarget>x64</PlatformTarget>
     <OutputPath>bin\x64\Release\</OutputPath>
     <DefineConstants>TRACE;NETFX_CORE;WINDOWS_UWP</DefineConstants>
     <Optimize>true</Optimize>
@@ -84,56 +101,77 @@
     <PlatformTarget>x64</PlatformTarget>
     <UseVSHostingProcess>false</UseVSHostingProcess>
     <ErrorReport>prompt</ErrorReport>
-    <Prefer32Bit>true</Prefer32Bit>
-    <UseDotNetNativeToolchain>true</UseDotNetNativeToolchain>
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="App.xaml.cs">
-      <DependentUpon>App.xaml</DependentUpon>
+    <Compile Include="..\ShimadzuIoTGatewayCore\CommandProcessors\CommandProcessor.cs">
+      <Link>CommandProcessors\CommandProcessor.cs</Link>
     </Compile>
-    <Compile Include="MainPage.xaml.cs">
-      <DependentUpon>MainPage.xaml</DependentUpon>
+    <Compile Include="..\ShimadzuIoTGatewayCore\CommandProcessors\PingDeviceProcessor.cs">
+      <Link>CommandProcessors\PingDeviceProcessor.cs</Link>
+    </Compile>
+    <Compile Include="..\ShimadzuIoTGatewayCore\Devices\DeviceBase.cs">
+      <Link>Devices\DeviceBase.cs</Link>
+    </Compile>
+    <Compile Include="..\ShimadzuIoTGatewayCore\Devices\Factory\DeviceFactory.cs">
+      <Link>Devices\Factory\DeviceFactory.cs</Link>
+    </Compile>
+    <Compile Include="..\ShimadzuIoTGatewayCore\Devices\Factory\IDeviceFactory.cs">
+      <Link>Devices\Factory\IDeviceFactory.cs</Link>
+    </Compile>
+    <Compile Include="..\ShimadzuIoTGatewayCore\Devices\IDevice.cs">
+      <Link>Devices\IDevice.cs</Link>
+    </Compile>
+    <Compile Include="..\ShimadzuIoTGatewayCore\Logging\ILogger.cs">
+      <Link>Logging\ILogger.cs</Link>
+    </Compile>
+    <Compile Include="..\ShimadzuIoTGatewayCore\Logging\TraceLogger.cs">
+      <Link>Logging\TraceLogger.cs</Link>
+    </Compile>
+    <Compile Include="..\ShimadzuIoTGatewayCore\Repository\AppConfigRepository.cs">
+      <Link>Repository\AppConfigRepository.cs</Link>
+    </Compile>
+    <Compile Include="..\ShimadzuIoTGatewayCore\Telemetry\ConcreteTelemetry.cs">
+      <Link>Telemetry\ConcreteTelemetry.cs</Link>
+    </Compile>
+    <Compile Include="..\ShimadzuIoTGatewayCore\Telemetry\Factory\GenericConcreteTelemetryFactory.cs">
+      <Link>Telemetry\Factory\GenericConcreteTelemetryFactory.cs</Link>
+    </Compile>
+    <Compile Include="..\ShimadzuIoTGatewayCore\Telemetry\Factory\ITelemetryFactory.cs">
+      <Link>Telemetry\Factory\ITelemetryFactory.cs</Link>
+    </Compile>
+    <Compile Include="..\ShimadzuIoTGatewayCore\Telemetry\ITelemetry.cs">
+      <Link>Telemetry\ITelemetry.cs</Link>
+    </Compile>
+    <Compile Include="..\ShimadzuIoTGatewayCore\Transport\DeserializableCommand.cs">
+      <Link>Transport\DeserializableCommand.cs</Link>
+    </Compile>
+    <Compile Include="..\ShimadzuIoTGatewayCore\Transport\EmptyTransport.cs">
+      <Link>Transport\EmptyTransport.cs</Link>
+    </Compile>
+    <Compile Include="..\ShimadzuIoTGatewayCore\Transport\Factory\IoTHubTransportFactory.cs">
+      <Link>Transport\Factory\IoTHubTransportFactory.cs</Link>
+    </Compile>
+    <Compile Include="..\ShimadzuIoTGatewayCore\Transport\Factory\ITransportFactory.cs">
+      <Link>Transport\Factory\ITransportFactory.cs</Link>
+    </Compile>
+    <Compile Include="..\ShimadzuIoTGatewayCore\Transport\IoTHubTransport.cs">
+      <Link>Transport\IoTHubTransport.cs</Link>
+    </Compile>
+    <Compile Include="..\ShimadzuIoTGatewayCore\Transport\ITransport.cs">
+      <Link>Transport\ITransport.cs</Link>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Properties\ShimadzuIoTGatewayCore.UWP.rd.xml" />
   </ItemGroup>
-  <ItemGroup>
-    <AppxManifest Include="Package.appxmanifest">
-      <SubType>Designer</SubType>
-    </AppxManifest>
-    <None Include="ShimadzuIoTGateway_TemporaryKey.pfx" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Properties\Default.rd.xml" />
-    <Content Include="Assets\LockScreenLogo.scale-200.png" />
-    <Content Include="Assets\SplashScreen.scale-200.png" />
-    <Content Include="Assets\Square150x150Logo.scale-200.png" />
-    <Content Include="Assets\Square44x44Logo.scale-200.png" />
-    <Content Include="Assets\Square44x44Logo.targetsize-24_altform-unplated.png" />
-    <Content Include="Assets\StoreLogo.png" />
-    <Content Include="Assets\Wide310x150Logo.scale-200.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <ApplicationDefinition Include="App.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </ApplicationDefinition>
-    <Page Include="MainPage.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\Common.UWP\Common.UWP.csproj">
       <Project>{a9f4ca27-7df5-450c-9130-c2d9589b13e7}</Project>
       <Name>Common.UWP</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\DeviceAdministration\Infrastructure.UWP\Infrastructure.UWP.csproj">
-      <Project>{c3a7930f-7e81-4f93-9b1b-d2bcdc8cd40e}</Project>
-      <Name>Infrastructure.UWP</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
