--- a/DeviceRegister/DeviceAdministration/Infrastructure/Infrastructure.csproj
+++ b/DeviceRegister/DeviceAdministration/Infrastructure/Infrastructure.csproj
@@ -253,7 +253,12 @@
     <EmbeddedResource Include="Strings.zh-HANS.resx" />
     <EmbeddedResource Include="Strings.zh-HANT.resx" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\..\Common\Common.csproj">
+      <Project>{5959c109-5369-4ff7-8b55-605a79fdf200}</Project>
+      <Name>Common</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
