--- a/SIoTGateway/Sensors/Acceleration/Acceleration.UWP.csproj
+++ b/SIoTGateway/Sensors/Acceleration/Acceleration.UWP.csproj
@@ -116,6 +116,9 @@
     <Compile Include="..\Acceleration.Classic\Devices\Factory\DeviceFactory.cs">
       <Link>Devices\Factory\DeviceFactory.cs</Link>
     </Compile>
+    <Compile Include="..\Acceleration.Classic\OperationValue.cs">
+      <Link>OperationValue.cs</Link>
+    </Compile>
     <Compile Include="..\Acceleration.Classic\Telemetry\Data\RemoteMonitorTelemetryData.cs">
       <Link>Telemetry\Data\RemoteMonitorTelemetryData.cs</Link>
     </Compile>
