--- a/SIoTGateway/Sensors/SensorsBase.Classic/SensorsBase.Classic.csproj
+++ b/SIoTGateway/Sensors/SensorsBase.Classic/SensorsBase.Classic.csproj
@@ -34,6 +34,10 @@
       <HintPath>..\..\packages\M2Mqtt.4.3.0.0\lib\net45\M2Mqtt.Net.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,7 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IOperationValue.cs" />
+    <Compile Include="OperationValueBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SensorsBase.cs" />
     <Compile Include="Telemetry\Data\RemoteMonitorTelemetryDataBase.cs" />
