--- a/SIoTGateway/Sensors/SensorsBase/SensorsBase.UWP.csproj
+++ b/SIoTGateway/Sensors/SensorsBase/SensorsBase.UWP.csproj
@@ -107,6 +107,15 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SensorsBase.Classic\CommandParameters\IsAvailableCommandParameter.cs">
+      <Link>CommandParameters\IsAvailableCommandParameter.cs</Link>
+    </Compile>
+    <Compile Include="..\SensorsBase.Classic\CommandProcessors\StartCommandProcessor.cs">
+      <Link>CommandProcessors\StartCommandProcessor.cs</Link>
+    </Compile>
+    <Compile Include="..\SensorsBase.Classic\CommandProcessors\StopCommandProcessor.cs">
+      <Link>CommandProcessors\StopCommandProcessor.cs</Link>
+    </Compile>
     <Compile Include="..\SensorsBase.Classic\OperationValueBase.cs">
       <Link>OperationValueBase.cs</Link>
     </Compile>
