--- a/SIoTGateway/SIotGatewayCore/project.json
+++ b/SIoTGateway/SIotGatewayCore/project.json
@@ -1,7 +1,8 @@
 ﻿{
   "dependencies": {
     "Microsoft.Azure.Devices.Client": "1.0.21",
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0"
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
+    "Newtonsoft.Json": "6.0.8"
   },
   "frameworks": {
     "uap10.0": {}
